[tool.poetry]
name = "url-shortener"
version = "0.0.1"
description = "A simple URL shortener built using FastAPI and PostgreSQL"
authors = ["greatlolz"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
sqlalchemy = "^2.0.43"
psycopg2 = "^2.9.10"
pydantic = "^2.11.9"
alembic = "^1.16.5"
python-dotenv = "^1.1.1"

[tool.pytest.ini_options]
env = [
    "DATABASE_URL=sqlite:///:memory:?check_same_thread=False",
]

[tool.poetry.group.dev.dependencies]
pytest-postgresql = "^7.0.2"
psycopg = {extras = ["binary"], version = "^3.2.10"}
pytest-env = "^1.1.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
